kube-camino.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: camino
  labels:
    app: camino
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: camino
  template:
    metadata:
      labels:
        app: camino
    spec:
      containers:
        - name: camino
          image: eu.gcr.io/api-project-704693280880/camino:latest
          resources:
            requests:
              memory: "50Mi"
              cpu: "100m"
            limits:
              memory: "200Mi"
              cpu: "400m"
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: camino
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8000
  selector:
    app: camino

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: camino
  namespace: default
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`camino.ipavec.net`)
    kind: Rule
    services:
    - name: camino
      port: 8000
  tls:
    secretName: camino-cert
