kube-hribi.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: hribi
  labels:
    app: hribi
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: hribi
  template:
    metadata:
      labels:
        app: hribi
    spec:
      containers:
        - name: hribi
          image: gcr.io/api-project-704693280880/camino:latest
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
            limits:
              memory: "200Mi"
              cpu: "100m"
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: hribi
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8000
  selector:
    app: hribi

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hribi
  namespace: default
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`hribi.ipavec.net`)
    kind: Rule
    services:
    - name: hribi
      port: 8000
  tls:
    secretName: hribi-cert
